[DEV] Use valueOf instead of new for number types
Change-Id: I40f9d5ea3815d42c4ac9e56de71918615736a22e
Reviewed-on: https://gerrit.parrot.biz/27469
Reviewed-by: Nicolas Brulez <nicolas.brulez@parrot.com>