@@ -151,15 +151,15 @@ public class ARControllerArgumentDictionary<V> implements Map<String, V> /*Parce
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_U32:
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_I32:
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_ENUM:
-                            ret = (V) new Integer(nativeGetArgValueInt (nativeArg));
+                            ret = (V) Integer.valueOf(nativeGetArgValueInt (nativeArg));
                             break;
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_U64:
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_I64:
-                            ret = (V) new Long(nativeGetArgValueLong (nativeArg));
+                            ret = (V) Long.valueOf(nativeGetArgValueLong (nativeArg));
                             break;
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_FLOAT:
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_DOUBLE:
-                            ret = (V) new Double(nativeGetArgValueDouble (nativeArg));
+                            ret = (V) Double.valueOf(nativeGetArgValueDouble (nativeArg));
                             break;
                         
                         case ARCONTROLLER_DICTIONARY_VALUE_TYPE_STRING:
